few L2Data streams fixes